--- a/templates/macros/blog.html
+++ b/templates/macros/blog.html
@@ -1,5 +1,5 @@
 {% macro blog_post(date, title, content) %}
-<div class="border-b pb-4 mb-4">
+<div class="pb-4">
   <div class="flex items-center gap-4 mb-2">
     <h3 class="text-base font-semibold">{{title}}</h3>
     <p class="text-white/50 text-sm">{{date}}</p>
