--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -38,14 +38,7 @@
     <h2 class="text-lg font-bold mb-6">Latest Updates</h2>
 
     {% call blog::blog_post( "January 14, 2025", "New Website", "We have
-    a new website!"
-    ) %} {%
-    call blog::blog_post( "January 10, 2025", "Cloud Provider Partnerships",
-    "OpenAgents has established strategic partnerships with leading cloud
-    providers to ensure robust infrastructure for our decentralized agent
-    marketplace." ) %} {% call blog::blog_post( "January 5, 2025", "Developer
-    Tools Beta", "Our latest suite of developer tools has entered beta testing,
-    enabling creators to build and deploy AI agents more efficiently than ever."
-    ) %}
+    a new website! It's inspired by the US Graphics Company, from which we also have a new font: Berkeley Mono."
+    ) %} 
   </div>
 </div>
