--- a/templates/header.html
+++ b/templates/header.html
@@ -1,10 +1,10 @@
 {% import "macros/nav.html" as nav %}
 
-<div class="grid grid-cols-2 sm:grid-cols-3 lg:grid-cols-6 gap-2 sm:gap-4 mb-4 sm:mb-6">
+<div class="grid grid-cols-3 lg:grid-cols-6 gap-4 mb-6">
   {% call nav::nav_button("/", "Home", path) %}
   {% call nav::nav_button("/onyx", "Mobile App", path) %}
-  {% call nav::nav_button("/video-series", "Videos", path) %}
+  {% call nav::nav_button("/video-series", "Video Series", path) %}
   {% call nav::nav_button("/services", "Services", path) %}
   {% call nav::nav_button("/company", "Company", path) %}
-  {% call nav::nav_button("/coming-soon", "Soon", path) %}
+  {% call nav::nav_button("/coming-soon", "Coming Soon", path) %}
 </div>
