--- a/templates/pages/repomap.html
+++ b/templates/pages/repomap.html
@@ -1,5 +1,9 @@
 {% extends "layouts/base.html" %}
 
+{% block head %}
+<script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
+{% endblock %}
+
 {% block content %}
 <div class="container mx-auto px-4 py-8">
     <h1 class="text-3xl font-bold mb-8">Repository Map Generator</h1>
